--- a/views/layout.pug
+++ b/views/layout.pug
@@ -39,7 +39,7 @@ html(lang="en")
 						if (coinConfig.siteTitlesByNetwork && coinConfig.siteTitlesByNetwork[activeBlockchain])
 							span #{coinConfig.siteTitlesByNetwork[activeBlockchain]}
 						else
-							span Bitcoin Explorer
+							span 比特幣瀏覽器
 						
 				button.navbar-toggler.navbar-toggler-right(type="button", data-toggle="collapse", data-target="#navbarNav", aria-label="collapse navigation")
 					span.navbar-toggler-icon
@@ -50,7 +50,7 @@ html(lang="en")
 							if (false)
 								li.nav-item
 									a.nav-link(href="/about")
-										span About
+										span 關於
 
 							if (activeBlockchain != "main")
 								- var chainName = activeBlockchain == "test" ? "testnet" : activeBlockchain
@@ -61,7 +61,7 @@ html(lang="en")
 							if (config.siteTools)
 								li.nav-item.dropdown
 									a.nav-link.dropdown-toggle(href="javascript:void(0)", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") 
-										span  Tools
+										span  工具
 									div.dropdown-menu.shadow(aria-label="Tools Items")
 										each itemIndex in config.site.prioritizedToolIdsList
 											- var item = config.siteTools[itemIndex];
@@ -86,7 +86,7 @@ html(lang="en")
 						form.form-inline.mr-3(method="post", action="/search")
 							input(type="hidden", name="_csrf", value=csrfToken)
 							div.input-group.input-group-sm
-								input.form-control.form-control-sm(type="text", name="query", placeholder="block height/hash, txid, address", value=(query))
+								input.form-control.form-control-sm(type="text", name="query", placeholder="區塊高度/hash, txid, 地址", value=(query))
 								div.input-group-append
 									button.btn.btn-primary(type="submit")
 										i.fas.fa-search
@@ -94,16 +94,16 @@ html(lang="en")
 						ul.navbar-nav
 							li.nav-item.dropdown
 								a.nav-link.dropdown-toggle(href="javascript:void(0)", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") 
-									span  Admin Tools
+									span  使用者工具
 								div.dropdown-menu.dropdown-menu-right.shadow(aria-label="Admin Tools Items")
-									a.dropdown-item(href="/admin") Admin Dashboard
+									a.dropdown-item(href="/admin") 使用者儀表板
 
 							li.nav-item.dropdown
 								a.nav-link.dropdown-toggle(href="javascript:void(0)", id="navbarDropdown", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") 
 									i.fas.fa-cog.mr-1 
 								div.dropdown-menu.dropdown-menu-right.shadow(aria-labelledby="navbarDropdown")
 									if (coinConfig.currencyUnits)
-										span.dropdown-header Currency Units
+										span.dropdown-header 貨幣單位
 										each item in coinConfig.currencyUnits
 											if (item.type == "native" || (config.queryExchangeRates && !config.privacyMode))
 												a.dropdown-item(href=("/changeSetting?name=currencyFormatType&value=" + item.values[0]))
@@ -112,15 +112,15 @@ html(lang="en")
 															i.fas.fa-check
 													span  #{item.name}
 
-									span.dropdown-header Theme
+									span.dropdown-header 主題
 									a.dropdown-item(href="/changeSetting?name=uiTheme&value=light")
 										if (session.uiTheme == "light" || session.uiTheme == "")
 											i.fas.fa-check
-										span  Light
+										span  光明版
 									a.dropdown-item(href="/changeSetting?name=uiTheme&value=dark")
 										if (session.uiTheme == "dark")
 											i.fas.fa-check
-										span  Dark
+										span  暗黑版
 		
 		if (host && port && !homepage && config.site.header.showToolsSubheader)
 			div.container.mb-2.pt-2.d-lg-block.d-none.border-top(id="sub-menu", style="")
@@ -169,9 +169,9 @@ html(lang="en")
 				div.row
 					div.col-md-5
 						dl
-							dt Source
+							dt 特別感謝
 							dd
-								a(href="https://github.com/janoside/btc-rpc-explorer") github.com/janoside/btc-rpc-explorer
+								a(href="https://github.com/janoside/btc-rpc-explorer") Janoside / CyberPunks Taiwan
 								
 								if (global.sourcecodeProjectMetadata)
 									div.mt-2
@@ -226,7 +226,7 @@ html(lang="en")
 							dd
 								button.btn.btn-primary(type="button", data-toggle="modal", data-target="#exampleModalCenter")
 									i.fas.fa-heart.mr-2
-									span Support Project
+									span 支持本專案
 		
 		script(src="/js/jquery.min.js", integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh")
 		script(src="/js/popper.min.js", integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo")
