--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,10 +1,10 @@
 extends layout
 
 block headContent
-	title Admin
+	title 管理者儀表板
 
 block content
-	h1.h3 Admin
+	h1.h3 管理者
 	hr
 
 	ul.nav.nav-tabs.mb-3
@@ -17,7 +17,7 @@ block content
 		div.tab-pane.active(id="tab-details", role="tabpanel")
 			div.card.shadow-sm.mb-3
 				div.card-body
-					h3.h6 Basics
+					h3.h6 基礎（Basics）
 					hr
 
 					div.clearfix
@@ -29,40 +29,40 @@ block content
 
 			div.card.shadow-sm.mb-3
 				div.card-body
-					h3.h6 Memory Stats
+					h3.h6 記憶體狀態（Memory Stats）
 					hr
 
 					div.clearfix
 						div.row
-							div.summary-table-label Heap Size
+							div.summary-table-label 堆疊大小（Heap Size）
 							div.summary-table-content.text-monospace
 								- var data = utils.formatLargeNumber(memstats.total_heap_size, 2);
 								span #{data[0]}
 									small  #{data[1].abbreviation}B
 
 						div.row
-							div.summary-table-label Used Heap
+							div.summary-table-label 已使用堆疊（Used Heap）
 							div.summary-table-content.text-monospace
 								- var data = utils.formatLargeNumber(memstats.used_heap_size, 2);
 								span #{data[0]}
 									small  #{data[1].abbreviation}B
 
 						div.row
-							div.summary-table-label Heap Limit
+							div.summary-table-label 堆疊限制（Heap Limit）
 							div.summary-table-content.text-monospace
 								- var data = utils.formatLargeNumber(memstats.heap_size_limit, 2);
 								span #{data[0]}
 									small  #{data[1].abbreviation}B
 
 						div.row
-							div.summary-table-label Physical Size
+							div.summary-table-label 實體大小（Physical Size）
 							div.summary-table-content.text-monospace
 								- var data = utils.formatLargeNumber(memstats.total_physical_size, 2);
 								span #{data[0]}
 									small  #{data[1].abbreviation}B
 
 						div.row
-							div.summary-table-label Available Size
+							div.summary-table-label 可用大小（Available Size）
 							div.summary-table-content.text-monospace
 								- var data = utils.formatLargeNumber(memstats.total_available_size, 2);
 								span #{data[0]}
@@ -71,14 +71,14 @@ block content
 			if (JSON.stringify(cacheStats) != "{}")
 				div.card.shadow-sm.mb-3
 					div.card-body
-						h3.h6 Cache Stats
+						h3.h6 快取狀態（Cache Stats）
 						hr
 
 						div.table-responsive
 							table.table.table-hover
 								thead
 									tr
-										th Cache
+										th 快取（Cache）
 										th.text-right Hit
 										th.text-right Miss
 										th.text-right Hit Rate
@@ -98,7 +98,7 @@ block content
 
 			div.card.shadow-sm.mb-3
 				div.card-body
-					h3.h6 RPC Stats
+					h3.h6 遠端程序呼叫狀態（RPC Stats）
 					hr
 
 					div.table-responsive
@@ -160,7 +160,7 @@ block content
 		div.tab-pane(id="tab-json", role="tabpanel")
 			div.card.shadow-sm.mb-3
 				div.card-body
-					h3.h6 Memory Stats
+					h3.h6 記憶體狀態（Memory Stats）
 					hr
 
 					div.highlight
@@ -169,7 +169,7 @@ block content
 
 			div.card.shadow-sm.mb-3
 				div.card-body
-					h3.h6 Error Stats
+					h3.h6 錯誤狀態（Error Stats）
 					hr
 
 					div.highlight
